Add: Support sound effects in Ogg Opus format.

--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -60,6 +60,7 @@ jobs:
           libicu-dev \
           liblzma-dev \
           liblzo2-dev \
+          libopusfile-dev \
           ${{ inputs.libraries }} \
           zlib1g-dev \
           # EOF
