--- a/.github/workflows/ci-mingw.yml
+++ b/.github/workflows/ci-mingw.yml
@@ -37,6 +37,8 @@ jobs:
           mingw-w64-${{ inputs.arch }}-libpng
           mingw-w64-${{ inputs.arch }}-lld
           mingw-w64-${{ inputs.arch }}-ninja
+          mingw-w64-${{ inputs.arch }}-opus
+          mingw-w64-${{ inputs.arch }}-opusfile
 
     - name: Install OpenGFX
       shell: bash
