--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -54,6 +54,8 @@ jobs:
           libicu-dev \
           liblzma-dev \
           liblzo2-dev \
+          libopus-dev \
+          libopusfile-dev \
           libsdl2-dev \
           zlib1g-dev \
           # EOF
