--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,6 +155,10 @@ if(NOT OPTION_DEDICATED)
             find_package(ICU OPTIONAL_COMPONENTS i18n)
         endif()
     endif()
+    find_package(Opus)
+    if(Opus_FOUND)
+        find_package(OpusFile)
+    endif()
 endif()
 if(APPLE)
     enable_language(OBJCXX)
@@ -331,6 +335,8 @@ if(NOT OPTION_DEDICATED)
     link_package(Fontconfig TARGET Fontconfig::Fontconfig)
     link_package(Harfbuzz TARGET harfbuzz::harfbuzz)
     link_package(ICU_i18n)
+    link_package(Opus TARGET Opus::opus)
+    link_package(OpusFile TARGET OpusFile::opusfile)
 
     if(SDL2_FOUND AND OPENGL_FOUND AND UNIX)
         # SDL2 dynamically loads OpenGL if needed, so do not link to OpenGL when
