--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -155,9 +155,13 @@ if(NOT OPTION_DEDICATED)
             find_package(ICU OPTIONAL_COMPONENTS i18n)
         endif()
     endif()
-    find_package(Opus)
-    if(Opus_FOUND)
-        find_package(OpusFile)
+    if(VCPKG_TOOLCHAIN)
+        find_package(OpusFile CONFIG)
+    else()
+        find_package(Opus)
+        if(Opus_FOUND)
+            find_package(OpusFile)
+        endif()
     endif()
 endif()
 if(APPLE)
