Change: [Script] Replace ScriptDate with ScriptEconomyDate and ScriptCalendarDate

--- a/src/script/api/CMakeLists.txt
+++ b/src/script/api/CMakeLists.txt
@@ -40,7 +40,7 @@ foreach(API "ai;AI" "game;GS" "template;Template")
     list(GET API 1 APIUC)
 
     foreach(SCRIPT_API_FILE IN LISTS SCRIPT_API_FILES)
-        if("${SCRIPT_API_FILE}" MATCHES ".*script_controller.*")
+        if("${SCRIPT_API_FILE}" MATCHES ".*script_controller.*" OR "${SCRIPT_API_FILE}" MATCHES ".*script_date.*")
             continue()
         endif()
         get_filename_component(SCRIPT_API_FILE_NAME "${SCRIPT_API_FILE}" NAME)
@@ -74,6 +74,7 @@ foreach(API "ai;AI" "game;GS" "template;Template")
 
     if(NOT "${APILC}" STREQUAL "template")
         list(APPEND SCRIPT_${APIUC}_BINARY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${APILC}/${APILC}_controller.hpp.sq")
+        list(APPEND SCRIPT_${APIUC}_BINARY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${APILC}/${APILC}_date.hpp.sq")
         set(INCLUDES_BINARY_FILE "${CMAKE_BINARY_DIR}/generated/script/api/${APILC}/${APILC}_includes.hpp")
         set(API_FILES "${CMAKE_CURRENT_BINARY_DIR}/${APILC}.files")
         file(GENERATE OUTPUT ${API_FILES} CONTENT "${SCRIPT_${APIUC}_BINARY_FILES}")
@@ -120,6 +121,7 @@ foreach(API "ai;AI" "game;GS" "template;Template")
             )
         endif()
     else()
+        list(APPEND SCRIPT_Template_BINARY_FILES "${CMAKE_CURRENT_SOURCE_DIR}/template/template_date.hpp.sq")
         add_dependencies(script_api
                 script_${APILC}
         )
@@ -233,7 +235,6 @@ add_files(
     script_company.cpp
     script_companymode.cpp
     script_controller.cpp
-    script_date.cpp
     script_depotlist.cpp
     script_engine.cpp
     script_enginelist.cpp
