--- a/.github/workflows/release-source.yml
+++ b/.github/workflows/release-source.yml
@@ -43,11 +43,10 @@ jobs:
         # We generate a changelog; for this we need the full git log.
         fetch-depth: 0
 
-    - name: Checkout (Trigger)
-      if: github.event_name == 'repository_dispatch'
+    - name: Checkout (Schedule)
+      if: github.event_name == 'schedule'
       uses: actions/checkout@v4
       with:
-        ref: ${{ github.event.client_payload.ref }}
         # We generate a changelog; for this we need the full git log.
         fetch-depth: 0
 
