--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -21,7 +21,7 @@ jobs:
   macos:
     name: CI
 
-    runs-on: macos-latest
+    runs-on: macos-15
     env:
       MACOSX_DEPLOYMENT_TARGET: 10.13
 
