--- a/.github/workflows/release-linux.yml
+++ b/.github/workflows/release-linux.yml
@@ -39,9 +39,7 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
-          core.exportVariable('VCPKG_BINARY_SOURCES', 'clear;x-gha,readwrite')
+          core.exportVariable('VCPKG_BINARY_SOURCES', 'clear;nuget,https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json,readwrite')
 
     - name: Install dependencies
       run: |
@@ -50,6 +48,7 @@ jobs:
         # autoconf-archive is needed to build ICU.
         yum install -y \
           autoconf-archive \
+          mono-complete \
           perl-IPC-Cmd \
           wget \
           zip \
@@ -121,6 +120,16 @@ jobs:
         (
           cd /vcpkg
           ./bootstrap-vcpkg.sh -disableMetrics
+          mono $(./vcpkg fetch nuget | tail -n 1) \
+            sources add \
+            -Source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
+            -StorePasswordInClearText \
+            -Name GitHubPackages \
+            -UserName "${{ github.repository_owner }}" \
+            -Password "${{ github.token }}"
+          mono $(./vcpkg fetch nuget | tail -n 1) \
+            setapikey "${{ github.token }}" \
+            -Source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
         )
 
         echo "::group::Install breakpad dependencies"
