--- a/.github/workflows/release-macos.yml
+++ b/.github/workflows/release-macos.yml
@@ -41,14 +41,23 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
-          core.exportVariable('ACTIONS_RUNTIME_TOKEN', process.env.ACTIONS_RUNTIME_TOKEN || '');
-          core.exportVariable('VCPKG_BINARY_SOURCES', 'clear;x-gha,readwrite')
+          core.exportVariable('VCPKG_BINARY_SOURCES', 'clear;nuget,https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json,readwrite')
 
     - name: Install vcpkg
       run: |
         git clone https://github.com/microsoft/vcpkg ${{ runner.temp }}/vcpkg
         ${{ runner.temp }}/vcpkg/bootstrap-vcpkg.sh -disableMetrics
+        brew install mono
+        mono $(${{ runner.temp }}/vcpkg/vcpkg fetch nuget | tail -n 1) \
+          sources add \
+          -Source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" \
+          -StorePasswordInClearText \
+          -Name GitHubPackages \
+          -UserName "${{ github.repository_owner }}" \
+          -Password "${{ github.token }}"
+        mono $(${{ runner.temp }}/vcpkg/vcpkg fetch nuget | tail -n 1) \
+          setapikey "${{ github.token }}" \
+          -Source "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
 
     - name: Install dependencies
       env:
