--- a/.github/workflows/release-windows-store.yml
+++ b/.github/workflows/release-windows-store.yml
@@ -11,7 +11,7 @@ jobs:
   windows-store:
     name: Windows Store
 
-    runs-on: windows-latest
+    runs-on: windows-2025
 
     steps:
     - name: Download source
