--- a/.github/workflows/release-windows.yml
+++ b/.github/workflows/release-windows.yml
@@ -26,7 +26,7 @@ jobs:
 
     name: Windows (${{ matrix.arch }})
 
-    runs-on: windows-latest
+    runs-on: windows-2025
 
     steps:
     - name: Download source
